styles.css
html {
  scroll-behavior: smooth;
}
body{
    margin:0px;
    font-family: "Google Sans","Roboto","Arial",sans-serif;
}
p {
  color:black;
}
.head {
    padding-left:10px;
    padding-top:0px;
    padding-bottom:0px;
    color:#004bc4;
}
.footer {
  padding:20px;
  margin-top:0px;
}

.navbar{
  overflow: hidden;
  background-color:white;
  position:sticky;
  top:0;
  z-index:10;
}
.navbar a {
  background-color:white;
  float: left;
  display: block;
  color: gray;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  transition:.2s;
  z-index: 20;
}
.navbar a.nav-right{
  float: right;
}
.navbar .icon {
  display: none;
}
@media screen and (max-width: 1070px) {
  .navbar a:not(:first-child) {display: none;}
  .navbar a.icon {
    float: right;
    display: block;
  }
}
@media screen and (max-width: 1070px) {
  .navbar.responsive {position: relative;}
  .navbar.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .navbar.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}
.navbar a:hover {
  background-color:rgb(238, 237, 237);
  transition:.2s;
}
#avion-mobile-body {
  display:none;
}
@media screen and (max-width: 1070px){
  #avion-mobile-body {
    text-align:center;
    padding:10px;
    margin:10px;
    background-color:rgb(240, 240, 240);
    border-radius:50px;
    display:inline-block;
  }
  #avion-body {
    display:none;
  }
}


.navbar a#home-active {
  background-color: #003489;
  color:white;
}
.navbar a#wb-active {
  background-color: rgb(70, 0, 70);
  color:white;
}
.navbar a#av-active {
  background-color: #F26522;
  color:white;
}
.navbar a#cf-active {
  background-color: darkgreen;
  color:white;
}
.navbar a#about-active {
  background-color: #003489;
  color:white;
}






.fas {
  font-size: 20px;
  color:#999999;
}
.main {
    background-color: #ebebeb;
    color:dimgray;
    margin:100px;
    padding:120px;
    background-image: url('pics/wblogo_dimgrey.png');
    background-repeat: no-repeat;
    background-position: 90%;
    background-size: 300px;
}
@media screen and (max-width: 1070px) {
  .main {
    background-image:none;
    margin:10px;
  }
}
.main2 {
  /* background-color: rgb(247, 247, 247); */
  background-color: #ebebeb;
  color:dimgray;
  margin:10%;
  margin-right:0px;
  margin-left:0px;
  padding:120px;
  background-image: url('pics/avion_logo.png');
  background-repeat: no-repeat;
  background-position: 90%;
  background-size: 300px;
}
@media screen and (max-width: 1070px) {
  .main2{
    background-image:none;
  }
}
.secondary {
  color: gray;
  text-align:center;
  margin:25px;
  padding:25px;
}
.app_ad {
  background-color: #003489;
  color: white;
  text-align:center;
  margin:70px;
  margin-right:0px;
  margin-left:0px;
  padding:60px;
}
.pro-head{
  margin-top:10px;
  margin-right:0px;
  margin-left:0px;
  padding:1px;
  padding-left:0px;
  font-size:40px;
}
.wb_head {
  text-align: right;
  background-color: #ebebeb;
  color: dimgray;
  margin: 50px;
  padding: 50px;
  background-image: url('pics/wblogo_purple.png');
  background-repeat: no-repeat;
  background-position: 0%;
  background-size: 300px;
}
@media only screen and (max-width: 1070px) {
  .wb_head {
    background-image:none;
    margin:auto;
    margin-top:10px;
   }
}
.wb_howItWorks{
    text-align:center;
    color: dimgray;
    margin: 50px;
    padding: 50px;
}
.wb_pricing{
    background-color: #ebebeb;
    color: dimgray;
    padding: 50px;}

.logo {
    background-position: center;
    background-image:url('pics/WN_logo2_grey.png');
    background-size:cover;
    width:70px;
    height:27px;

}

.links1 {
  background-color: white;
}

.bg_add {
    padding:50px;
    width : 1000px;
}
.textdec_none {
  text-decoration: none;
}

.song_container {
  padding:10px;
  margin:20px;
}
.gold {
  color:gold;
}
input {
  padding:10px;
  border-top:#004bc4 solid 2px;
  border-left: #004bc4 solid 2px;
  border-right:#003489 solid 2px;
  border-bottom:#003489 solid 2px;
  border-radius:15px;
}
.settings{
  margin:25px;
  margin-top:0px;
  border:3px solid grey;
}
.settings-section {
  margin:25px;
  padding:30px;
  margin-top:0px;
}
.settings-head {
  margin:25px;
  padding:25px;
  margin-bottom: 0px;
  background-color:#004bc4;
  color:white;
  font-size:20px;
}
.hr-settings{
  margin-right:30px;
  margin-left:30px;
  background-color:grey;
  height: 1px;
  border:none;
}
.cl_date {
  padding:10px;
  background-color:black;
  color:white;
}
.app {
  background-color: #fcfcfc;
  display: inline-block;
  border:#ebebeb solid 2px;
  width:10%;
  padding:20px;
  margin:20px;
  border-radius:10px;
  text-align:center;
  margin:80px;
}
.buy_button {
  padding:5px;
  border:none;
  background-color:blue;
  border: solid 1.5px black;
  color:white;
  border-radius:5px;
}
.app_img {
  border: black solid 2px;
  border-radius: 5px;
}
.app_desc {
  color:#fcfcfc;
  font-size: 12px;
  height:0px;
  transition:.5s;
}
.app_head{
  padding:10px;
  margin: 20px;
  color:#e6e6e6
}
@media screen and (max-width: 1070px) {
  #wb-head {
    margin:0;
    padding:0;
  }
}
.pro-logo {
  color:black;
  padding:10px;
  padding-top:16px;
  padding-bottom:8px;
  background-color:purple;
  font-family: 'Turret Road', cursive;
}
.pro-sublogo {
  background-color: rgb(70,0,70);
  padding:11px;
  color:purple;
}
.app:hover > .app_top {
  background-color:white;
}
.app:hover > .app_desc {
  height:100px;
  background-color:white;
  color:grey;
}
.app:hover > .app_author {
  background-color:white;
}
.app:hover {
  border: 2px solid black;
  background-color: red;
  background-size: cover;
  background-position: center;
  transition: .5s;
}
.cl_text {
  color:grey;
}
.learn_section{
  display:inline-block;
  color:#00550e;
  margin:30px;
  padding:30px;
  width:20%;
  height:180px;
  border-radius: 25px;
  border:2px solid #00550e;
}
/* ... */

